...
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "從上游分支拉取" } }
      }
    },
    "push" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Push" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "プッシュ" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "푸시" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "推送" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "推送" } }
      }
    },
...
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "顯示或隱藏儲存庫資訊" } }
      }
    },
    "repositoryMenu" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Repository" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "リポジトリ" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "저장소" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "仓库" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "儲存庫" } }
      }
    },
...
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "所選資料夾不在 Git 儲存庫中。" } }
      }
    },
    "ok" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "OK" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "OK" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "확인" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "好" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "好" } }
      }
    },
...
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "尚無提交的分支" } }
      }
    },
    "viewDetails" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "View Details" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "詳細を表示" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "세부 정보 보기" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "查看详情" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "查看詳細資訊" } }
      }
    },
...
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "在遠端建立此分支並將其設為上游" } }
      }
    },
    "cancelPush" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Cancel Push" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "プッシュをキャンセル" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "푸시 취소" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "取消推送" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "取消推送" } }
      }
    },
...
